[package]
name = "cherris"
version = "0.0.0"
description = "A Tauri App"
authors = ["samumartinfrias@gmail.com"]
license = "Apache-2.0 OR MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
color-eyre = "0.5"
tauri = { version = "1.5", features = [ "path-all", "fs-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
rand = "0.8.3"
rayon = "1.5.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
